tests/ui/parser/contract_function_shared_name.sol
contract C {
    function C() public {} //~ ERROR: functions are not allowed to have the same name as the contract

    function c() public {}
}
